--- a/index.html
+++ b/index.html
@@ -1,161 +1,153 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Roleta DStreet</title>
   <style>
     body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Arial', sans-serif;
       background-color: #111;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
 
-    img {
-      max-width: 150px;
+    .logo {
       margin-bottom: 10px;
+    }
+
+    .logo img {
+      max-height: 60px;
     }
 
     h1 {
-      color: #d4af37;
-      font-size: 1.5rem;
+      font-size: 1.5em;
+      color: #f7d43f;
+      margin: 10px;
+      text-align: center;
     }
 
     .regras {
-      font-size: 1.2rem;
-      color: #00ffff;
-      font-family: 'Comic Sans MS', cursive, sans-serif;
-      margin-bottom: 10px;
+      font-size: 1em;
+      color: #4ee2ec;
+      margin-bottom: 20px;
+      text-align: center;
     }
 
-    #wheelCanvas {
+    .roleta-container {
+      position: relative;
+    }
+
+    .roleta {
+      width: 300px;
+      height: 300px;
       border-radius: 50%;
       border: 10px solid white;
-      margin-top: 10px;
+      position: relative;
+      overflow: hidden;
+      transform: rotate(0deg);
+      transition: transform 4s cubic-bezier(0.33, 1, 0.68, 1);
     }
 
-    #pointer {
+    .fatia {
+      width: 50%;
+      height: 50%;
+      position: absolute;
+      transform-origin: 100% 100%;
+      clip-path: polygon(100% 100%, 100% 0, 0 0);
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      padding-left: 10px;
+      font-size: 0.9em;
+      font-weight: bold;
+      color: white;
+    }
+
+    .fatia:nth-child(1) { background: #e74c3c; transform: rotate(0deg); }
+    .fatia:nth-child(2) { background: #2ecc71; transform: rotate(60deg); }
+    .fatia:nth-child(3) { background: #3498db; transform: rotate(120deg); }
+    .fatia:nth-child(4) { background: #34495e; transform: rotate(180deg); }
+    .fatia:nth-child(5) { background: #9b59b6; transform: rotate(240deg); }
+    .fatia:nth-child(6) { background: #f1c40f; transform: rotate(300deg); }
+
+    .ponteiro {
       width: 0;
       height: 0;
       border-top: 20px solid transparent;
       border-bottom: 20px solid transparent;
-      border-left: 30px solid red;
+      border-left: 30px solid #f7d43f;
       position: absolute;
-      top: 50%;
-      right: calc(50% - 180px);
-      transform: translateY(-50%);
+      right: -20px;
+      top: calc(50% - 20px);
       z-index: 10;
     }
 
-    #spinButton {
-      margin-top: 20px;
-      padding: 15px 30px;
-      background-color: #ffcc00;
+    .botao {
+      background-color: #f7d43f;
       border: none;
-      border-radius: 10px;
-      font-size: 18px;
-      font-weight: bold;
-      color: #000;
+      padding: 12px 24px;
+      font-size: 1em;
+      border-radius: 8px;
       cursor: pointer;
+      margin-top: 30px;
+      font-weight: bold;
     }
 
-    #result {
+    .resultado {
       margin-top: 20px;
-      font-size: 22px;
-      color: cyan;
+      font-size: 1.3em;
+      color: #00ffff;
       font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <img src="logo.png" alt="Logo DStreet Company">
+  <div class="logo">
+    <img src="logo_dstreet.png" alt="Logo DStreet Company" />
+  </div>
   <h1>Gire e leve para casa até 10 camisetas!</h1>
   <div class="regras">R$5 = 1 giro | R$10 = 3 giros | R$20 = 4 giros</div>
-  <div id="pointer"></div>
-  <canvas id="wheelCanvas" width="400" height="400"></canvas>
-  <br>
-  <button id="spinButton">GIRAR</button>
-  <div id="result">Resultado:</div>
+
+  <div class="roleta-container">
+    <div class="ponteiro"></div>
+    <div id="roleta" class="roleta">
+      <div class="fatia">10 camisetas</div>
+      <div class="fatia">5 camisetas</div>
+      <div class="fatia">3 camisetas</div>
+      <div class="fatia">Tente outra vez</div>
+      <div class="fatia">Tente outra vez</div>
+      <div class="fatia">Tente outra vez</div>
+    </div>
+  </div>
+  <button class="botao" onclick="girarRoleta()">GIRAR</button>
+  <div id="resultado" class="resultado"></div>
 
   <script>
-    const wheelCanvas = document.getElementById("wheelCanvas");
-    const ctx = wheelCanvas.getContext("2d");
-    const segments = [
-      "Tente outra vez",
-      "3 camisetas",
-      "Tente outra vez",
-      "10 camisetas",
-      "Tente outra vez",
-      "5 camisetas"
-    ];
-    const colors = ["#2c3e50", "#3498db", "#2c3e50", "#e74c3c", "#2c3e50", "#2ecc71"];
-    const spinButton = document.getElementById("spinButton");
-    const resultDiv = document.getElementById("result");
-    const wheelRadius = wheelCanvas.width / 2;
-    const centerX = wheelCanvas.width / 2;
-    const centerY = wheelCanvas.height / 2;
-    let currentAngle = 0;
+    let anguloAtual = 0;
+    function girarRoleta() {
+      const roleta = document.getElementById('roleta');
+      const resultado = document.getElementById('resultado');
 
-    function drawWheel() {
-      const arcSize = (2 * Math.PI) / segments.length;
-      ctx.clearRect(0, 0, wheelCanvas.width, wheelCanvas.height);
-      segments.forEach((segment, i) => {
-        const startAngle = i * arcSize;
-        const endAngle = startAngle + arcSize;
-        ctx.beginPath();
-        ctx.fillStyle = colors[i];
-        ctx.moveTo(centerX, centerY);
-        ctx.arc(centerX, centerY, wheelRadius, startAngle, endAngle);
-        ctx.lineTo(centerX, centerY);
-        ctx.fill();
-        ctx.save();
-        ctx.translate(centerX, centerY);
-        ctx.rotate(startAngle + arcSize / 2);
-        ctx.fillStyle = "#fff";
-        ctx.font = "bold 14px Arial";
-        ctx.textAlign = "right";
-        ctx.fillText(segment, wheelRadius - 10, 10);
-        ctx.restore();
-      });
+      const setores = ["10 camisetas", "5 camisetas", "3 camisetas", "Tente outra vez", "Tente outra vez", "Tente outra vez"];
+      const setorSorteado = Math.floor(Math.random() * setores.length);
+
+      const anguloPorSetor = 360 / setores.length;
+      const anguloFinal = 360 * 5 + (setorSorteado * anguloPorSetor) + anguloPorSetor / 2;
+
+      anguloAtual += anguloFinal;
+      roleta.style.transform = `rotate(${anguloAtual}deg)`;
+
+      setTimeout(() => {
+        resultado.textContent = `Resultado: ${setores[setorSorteado]}`;
+      }, 4000);
     }
-
-    function spinWheel() {
-      const arcSize = (2 * Math.PI) / segments.length;
-      const spinAngle = Math.random() * 360 + 720;
-      const finalAngle = (currentAngle + spinAngle) % 360;
-      const index = Math.floor(((360 - finalAngle + 90) % 360) / (360 / segments.length));
-      const result = segments[index];
-      let duration = 3000;
-      let start = null;
-
-      function animate(timestamp) {
-        if (!start) start = timestamp;
-        const elapsed = timestamp - start;
-        const progress = Math.min(elapsed / duration, 1);
-        const angle = currentAngle + progress * spinAngle;
-        currentAngle = angle % 360;
-        const rad = (currentAngle * Math.PI) / 180;
-        ctx.save();
-        ctx.translate(centerX, centerY);
-        ctx.rotate(rad);
-        ctx.translate(-centerX, -centerY);
-        drawWheel();
-        ctx.restore();
-
-        if (progress < 1) {
-          requestAnimationFrame(animate);
-        } else {
-          resultDiv.textContent = "Resultado: " + result;
-        }
-      }
-
-      requestAnimationFrame(animate);
-    }
-
-    drawWheel();
-    spinButton.addEventListener("click", spinWheel);
   </script>
 </body>
 </html>
