--- a/index.html
+++ b/index.html
@@ -1,176 +1,190 @@
-!DOCTYPE html>
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DStreet Roleta</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DStreet - Roleta Premiada</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
       font-family: 'Arial', sans-serif;
-      background-color: #111;
-      color: #fff;
+      background-color: #0d0d0d;
+      color: white;
       text-align: center;
     }
 
-    .logo {
-      width: 120px;
-      margin: 20px auto;
-      display: block;
+    header img {
+      max-width: 120px;
+      margin-top: 20px;
     }
 
     h1 {
-      color: #f1c40f;
-      animation: piscar 1s infinite;
-      margin-top: 10px;
+      color: #FFD700;
+      font-size: 1.8em;
+      margin: 10px 0;
     }
 
-    @keyframes piscar {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0.2; }
+    p.regras {
+      font-family: 'Cursive', sans-serif;
+      color: #00e6e6;
+      font-size: 1.1em;
+      margin: 5px 0 20px 0;
     }
 
-    .regras {
-      color: #00eaff;
-      font-size: 18px;
-      margin-bottom: 30px;
-      font-family: 'Comic Sans MS', cursive;
-    }
-
-    .roleta-container {
+    .wheel-container {
       position: relative;
-      display: inline-block;
+      width: 320px;
+      margin: 20px auto;
     }
 
-    .ponteiro {
+    canvas {
+      width: 100%;
+      height: auto;
+      border-radius: 50%;
+      background-color: #111;
+    }
+
+    .pointer {
       position: absolute;
-      top: 10px;
+      top: -10px;
       left: 50%;
       transform: translateX(-50%);
       width: 0;
       height: 0;
       border-left: 20px solid transparent;
       border-right: 20px solid transparent;
-      border-bottom: 40px solid yellow;
-      z-index: 10;
+      border-bottom: 30px solid yellow;
     }
 
-    canvas {
-      border-radius: 50%;
-    }
-
-    #resultado {
-      font-size: 24px;
-      font-weight: bold;
-      color: #00eaff;
+    button {
+      background-color: #FFD700;
+      color: black;
+      border: none;
+      padding: 12px 24px;
+      font-size: 16px;
+      border-radius: 8px;
+      cursor: pointer;
       margin-top: 20px;
     }
 
-    #girar {
-      background-color: #f1c40f;
-      color: black;
-      padding: 15px 30px;
-      font-size: 20px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
+    #resultado {
+      font-size: 1.4em;
+      color: #00e6e6;
+      font-weight: bold;
       margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img src="logo-dstreet.png" alt="Logo DStreet Company" class="logo" />
-    <h1>Gire e leve para casa até 10 camisetas!</h1>
-    <p class="regras">R$5 = 1 giro | R$10 = 3 giros | R$20 = 4 giros</p>
 
-    <div class="roleta-container">
-      <div class="ponteiro"></div>
-      <canvas id="wheel" width="500" height="500"></canvas>
-    </div>
+  <header>
+    <img src="https://dstreetcompany.com/logo.png" alt="Logo DStreet Company" />
+  </header>
 
-    <button id="girar">GIRAR</button>
-    <p id="resultado" class="resultado"></p>
+  <h1>Gire e leve para casa até 10 camisetas!</h1>
+  <p class="regras">R$5 = 1 giro | R$10 = 3 giros | R$20 = 4 giros</p>
+
+  <div class="wheel-container">
+    <div class="pointer"></div>
+    <canvas id="wheel" width="300" height="300"></canvas>
   </div>
 
+  <button onclick="girar()">GIRAR</button>
+  <p id="resultado"></p>
+
+  <audio id="tick" src="https://www.soundjay.com/misc/sounds/clock-ticking-1.mp3" preload="auto"></audio>
+
   <script>
+    const premios = [
+      "Tente outra vez", "3 camisetas", "Tente outra vez",
+      "5 camisetas", "Tente outra vez", "10 camisetas"
+    ];
+    const colors = ["#222", "#007acc", "#222", "#00b36b", "#222", "#e62e00"];
     const canvas = document.getElementById("wheel");
     const ctx = canvas.getContext("2d");
-    const girarBtn = document.getElementById("girar");
-    const resultado = document.getElementById("resultado");
-
-    const premios = [
-      "10 camisetas", "Tente outra vez", "5 camisetas",
-      "Tente outra vez", "3 camisetas", "Tente outra vez"
-    ];
-
-    const colors = ["#e74c3c", "#34495e", "#2ecc71", "#8e44ad", "#3498db", "#f39c12"];
-    const size = canvas.width;
-    const center = size / 2;
-    const total = premios.length;
-    const angle = 2 * Math.PI / total;
-    let rotation = 0;
+    const tick = document.getElementById("tick");
+    const numSegments = premios.length;
+    const anglePerSlice = (2 * Math.PI) / numSegments;
     let isSpinning = false;
 
-    function drawWheel() {
-      for (let i = 0; i < total; i++) {
-        const startAngle = angle * i + rotation;
-        const endAngle = startAngle + angle;
+    function desenharRoleta() {
+      const centerX = canvas.width / 2;
+      const centerY = canvas.height / 2;
+      const radius = canvas.width / 2;
+
+      for (let i = 0; i < numSegments; i++) {
+        const startAngle = i * anglePerSlice;
+        const endAngle = startAngle + anglePerSlice;
 
         ctx.beginPath();
-        ctx.moveTo(center, center);
-        ctx.arc(center, center, center, startAngle, endAngle);
-        ctx.fillStyle = colors[i % colors.length];
+        ctx.moveTo(centerX, centerY);
+        ctx.arc(centerX, centerY, radius, startAngle, endAngle);
+        ctx.fillStyle = colors[i];
         ctx.fill();
-        ctx.save();
 
-        ctx.translate(center, center);
-        ctx.rotate(startAngle + angle / 2);
-        ctx.textAlign = "right";
+        ctx.save();
+        ctx.translate(centerX, centerY);
+        ctx.rotate(startAngle + anglePerSlice / 2);
         ctx.fillStyle = "white";
-        ctx.font = "bold 16px Arial";
-        ctx.fillText(premios[i], center - 10, 10);
+        ctx.font = "bold 13px Arial";
+        ctx.textAlign = "right";
+        ctx.fillText(premios[i], radius - 10, 5);
         ctx.restore();
       }
     }
 
-    function girarRoleta() {
+    desenharRoleta();
+
+    function girar() {
       if (isSpinning) return;
       isSpinning = true;
-      resultado.textContent = "";
 
-      const giroExtra = Math.random() * 360;
-      const giros = 360 * 5 + giroExtra;
+      document.getElementById("resultado").innerText = "";
 
-      const duracao = 5000;
-      const inicio = performance.now();
+      const duration = 4000;
+      const rotation = 360 * 5 + Math.floor(Math.random() * 360);
+      const start = performance.now();
+      let lastTickAngle = 0;
 
-      function animar(agora) {
-        const tempo = agora - inicio;
-        const progresso = Math.min(tempo / duracao, 1);
-        const easeOut = 1 - Math.pow(1 - progresso, 3);
+      function animate(time) {
+        const elapsed = time - start;
+        const progress = Math.min(elapsed / duration, 1);
+        const eased = easeOutCubic(progress);
+        const angle = rotation * eased;
 
-        rotation = (giros * easeOut * Math.PI) / 180;
-        ctx.clearRect(0, 0, size, size);
-        drawWheel();
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        ctx.save();
+        ctx.translate(canvas.width / 2, canvas.height / 2);
+        ctx.rotate((angle * Math.PI) / 180);
+        ctx.translate(-canvas.width / 2, -canvas.height / 2);
+        desenharRoleta();
+        ctx.restore();
 
-        if (progresso < 1) {
-          requestAnimationFrame(animar);
+        const currentTickAngle = Math.floor(angle / (360 / numSegments));
+        if (currentTickAngle !== lastTickAngle) {
+          tick.pause();
+          tick.currentTime = 0;
+          tick.play();
+          lastTickAngle = currentTickAngle;
+        }
+
+        if (progress < 1) {
+          requestAnimationFrame(animate);
         } else {
-          const grausFinal = (rotation * 180 / Math.PI) % 360;
-          const index = Math.floor((360 - grausFinal) / (360 / total)) % total;
-          resultado.textContent = `Resultado: ${premios[index]}`;
+          const finalAngle = (angle % 360 + 360) % 360;
+          const index = numSegments - Math.floor(finalAngle / (360 / numSegments)) - 1;
+          const resultado = premios[index];
+          document.getElementById("resultado").innerText = "Resultado: " + resultado;
           isSpinning = false;
         }
       }
 
-      requestAnimationFrame(animar);
+      requestAnimationFrame(animate);
     }
 
-    drawWheel();
-    girarBtn.addEventListener("click", girarRoleta);
+    function easeOutCubic(t) {
+      return 1 - Math.pow(1 - t, 3);
+    }
   </script>
 </body>
 </html>
-
