--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- !DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -20,6 +20,7 @@
 
     .logo img {
       width: 140px;
+      height: auto;
     }
 
     h1 {
@@ -32,6 +33,18 @@
       font-size: 18px;
       color: #00FFFF;
       margin-bottom: 20px;
+    }
+
+    #pointer {
+      width: 0;
+      height: 0;
+      border-left: 20px solid transparent;
+      border-right: 20px solid transparent;
+      border-bottom: 30px solid yellow;
+      margin: 0 auto;
+      position: relative;
+      top: 5px;
+      z-index: 10;
     }
 
     #wheel {
@@ -47,18 +60,6 @@
     #wheel canvas {
       width: 100%;
       height: 100%;
-    }
-
-    #pointer {
-      width: 0;
-      height: 0;
-      border-left: 20px solid transparent;
-      border-right: 20px solid transparent;
-      border-bottom: 30px solid yellow;
-      margin: 0 auto;
-      position: relative;
-      top: 10px;
-      z-index: 10;
     }
 
     #spin {
@@ -93,8 +94,8 @@
   <div id="wheel">
     <canvas id="canvas" width="300" height="300"></canvas>
   </div>
-  <button id="spin">GIRAR</button>
 
+  <button id="spin">GIRAR</button>
   <div id="result">Resultado: </div>
 
   <audio id="tickSound" src="https://www.soundjay.com/mechanical/sounds/mechanical-click-10.mp3" preload="auto"></audio>
@@ -171,4 +172,3 @@
   </script>
 </body>
 </html>
-
